KPMP-765 user menu no longer cut off

--- a/src/index.scss
+++ b/src/index.scss
@@ -243,6 +243,9 @@ PACKAGES
 		a:hover {
 			text-decoration: none !important;
 		}
+
+		left: auto !important;
+		right: 0px !important;
 	}
 }
 
